[gd_scene load_steps=17 format=3 uid="uid://dg4me5y8j85es"]

[ext_resource type="Script" path="res://scenes/Enemies/Hunter/hunter.gd" id="1_2vqhf"]
[ext_resource type="Texture2D" uid="uid://ntdgvptx12p" path="res://graphics/enemies/hunter/parts/torso.png" id="2_247g8"]
[ext_resource type="Texture2D" uid="uid://dhdn4uvvhclvm" path="res://graphics/enemies/hunter/parts/leg_front_inner.png" id="3_m0fa1"]
[ext_resource type="Texture2D" uid="uid://upq1endlyo1s" path="res://graphics/enemies/hunter/parts/leg_front_outer.png" id="4_u54ot"]
[ext_resource type="Texture2D" uid="uid://c7y43n38i5wvg" path="res://graphics/enemies/hunter/parts/head.png" id="5_upq2r"]
[ext_resource type="Texture2D" uid="uid://bt1yrtgml2myg" path="res://graphics/enemies/hunter/parts/leg_back_inner.png" id="6_mcmot"]
[ext_resource type="Texture2D" uid="uid://01thaq5m8e6g" path="res://graphics/enemies/hunter/parts/claw.png" id="6_scf2s"]
[ext_resource type="Texture2D" uid="uid://bmpjc82qpoe4e" path="res://graphics/enemies/hunter/parts/leg_back_outer.png" id="7_1nasb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_absh6"]
radius = 28.0
height = 302.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0waqb"]
radius = 1244.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6rnjk"]
radius = 209.06

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_eykn5"]
resource_name = "FrontRightLeg"
target_nodepath = NodePath("../Targets/FrontRight")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Torso/FrontRightLeg")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Torso/FrontRightLeg/FrontRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_qltb6"]
resource_name = "FrontLeftLeg"
target_nodepath = NodePath("../Targets/FrontLeft")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("Torso/FrontLeftLeg")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("Torso/FrontLeftLeg/FrontLeftClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ne7bp"]
resource_name = "BackRightLeg"
target_nodepath = NodePath("../Targets/BackRight")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/BackRightLeg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/BackRightLeg/BackRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_xxy5x"]
resource_name = "BackLeftLeg"
target_nodepath = NodePath("../Targets/BackLeft")
flip_bend_direction = true
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/BackLeftLeg")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/BackLeftLeg/BackLeftClaw")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_igila"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_eykn5")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_qltb6")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_ne7bp")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_xxy5x")

[node name="Hunter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_2vqhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_absh6")

[node name="NoticeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_0waqb")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_6rnjk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="NavigationTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_igila")

[node name="Torso" type="Bone2D" parent="Skeleton2D"]

[node name="Torso" type="Sprite2D" parent="Skeleton2D/Torso"]
top_level = true
position = Vector2(7, 75)
texture = ExtResource("2_247g8")

[node name="FrontRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(33, -10)
rotation = -0.0256466
scale = Vector2(0.999983, 0.999983)
metadata/_local_pose_override_enabled_ = true

[node name="FrontRightLeg" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(22, -36)
texture = ExtResource("3_m0fa1")

[node name="FrontRightClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(44, -63)
auto_calculate_length_and_angle = false
length = 104.226
bone_angle = -58.131
metadata/_local_pose_override_enabled_ = true

[node name="FrontRightClaw" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg/FrontRightClaw"]
position = Vector2(47, -35)
texture = ExtResource("4_u54ot")

[node name="FrontLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-31, -12)
rotation = 0.0296571
scale = Vector2(0.999931, 0.999931)
metadata/_local_pose_override_enabled_ = true

[node name="FrontLeftLeg" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-22, -36)
texture = ExtResource("3_m0fa1")
flip_h = true

[node name="FrontLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-44, -63)
auto_calculate_length_and_angle = false
length = 104.226
bone_angle = -124.661
metadata/_local_pose_override_enabled_ = true

[node name="FrontLeftClaw" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg/FrontLeftClaw"]
position = Vector2(-46, -34)
texture = ExtResource("4_u54ot")
flip_h = true

[node name="Head" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(1, -24)
auto_calculate_length_and_angle = false
length = 121.03
bone_angle = -90.0

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(0, -57)
texture = ExtResource("5_upq2r")

[node name="RightClaw" type="Node2D" parent="Skeleton2D/Torso/Head/Sprite2D"]
show_behind_parent = true
position = Vector2(17, -11)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head/Sprite2D/RightClaw"]
show_behind_parent = true
position = Vector2(22, -43)
texture = ExtResource("6_scf2s")

[node name="LeftClaw" type="Node2D" parent="Skeleton2D/Torso/Head/Sprite2D"]
show_behind_parent = true
position = Vector2(-17, -11)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head/Sprite2D/LeftClaw"]
show_behind_parent = true
position = Vector2(-22, -43)
texture = ExtResource("6_scf2s")
flip_h = true

[node name="BackRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(31, 23)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(18, 32)
texture = ExtResource("6_mcmot")

[node name="BackRightClaw" type="Bone2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(40, 67)
auto_calculate_length_and_angle = false
length = 125.231
bone_angle = 67.4
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg/BackRightClaw"]
position = Vector2(30, 47)
texture = ExtResource("7_1nasb")

[node name="BackLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-31, 23)
metadata/_local_pose_override_enabled_ = true

[node name="BackLeftLeg" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-17, 33)
texture = ExtResource("6_mcmot")
flip_h = true

[node name="BackLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-39, 71)
auto_calculate_length_and_angle = false
length = 125.231
bone_angle = 114.185
metadata/_local_pose_override_enabled_ = true

[node name="BackLeftClaw" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg/BackLeftClaw"]
position = Vector2(-32, 44)
texture = ExtResource("7_1nasb")
flip_h = true

[node name="Targets" type="Node2D" parent="."]

[node name="FrontRight" type="Marker2D" parent="Targets"]
position = Vector2(144, -189)

[node name="FrontLeft" type="Marker2D" parent="Targets"]
position = Vector2(-140, -189)

[node name="BackRight" type="Marker2D" parent="Targets"]
position = Vector2(118, 214)

[node name="BackLeft" type="Marker2D" parent="Targets"]
position = Vector2(-120, 214)

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/NavigationTimer" to="." method="_on_navigation_timer_timeout"]
